style: controller button 크기 조절

--- a/01-move-animation/style.css
+++ b/01-move-animation/style.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+button[id$="ArrowBtn"] {
+  width: 20px;
+}
+
 #canvas-wrapper > canvas {
   background-color: black;
 }
